--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Lord of Rings</h1>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusantium aliquam
+         distinctio maiores dolores amet harum minima consequuntur quos.
+         Eum esse aspernatur nostrum debitis hic, recusandae tempore et totam culpa?</p>
 </body>
 </html>
