--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusantium aliquam
          distinctio maiores dolores amet harum minima consequuntur quos.
          Eum esse aspernatur nostrum debitis hic, recusandae tempore et totam culpa?</p>
+         <b>End</b>
 </body>
 </html>
